--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ weight = 2
 [[menu.main]]
 identifier = "traduccion"
 URL = "traduccion"
-name = "Traducción e Interpretación"
+name = "Traducción"
 weight = 4
 [[menu.main]]
 parent = "traduccion"
