--- a/config.toml
+++ b/config.toml
@@ -100,7 +100,7 @@ author = "Ana Medina"
 copyright = "Qori - Copyright &copy; 2020"
 description = "Qori est une société proposant des services à vos besoins"
 email = "contact@qori.fr"
-#google_analitycs_id = "Your ID"
+google_analitycs_id = "UA-59880117-2"
 home = "Qori"
 logo = "images/logo-w-sm.gif"
 phone = "https://calendly.com/qori"
