--- a/data/es/homepage.yml
+++ b/data/es/homepage.yml
@@ -83,7 +83,7 @@ Tenemos una red de traductores e intérpretes seleccionados que comparten nuestr
 
 ############################# Course ################################
 course:
-  enable : true
+  enable : false
   title : "Talleres Virtuales"
   # course item comes from "content/**/course" folder.
 
@@ -100,7 +100,7 @@ cta:
 
 ######################## Success story #############################
 success_story:
-  enable : true
+  enable : false
   bg_image : "images/backgrounds/success-story.jpg"
   title : "Historias De Éxito"
   content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat pariatur. Excepteur sint occaecat.
@@ -114,14 +114,14 @@ success_story:
 
 ############################# event ################################
 event:
-  enable : true
+  enable : false
   title : "Proximos Eventos"
   # event item comes from "content/**/event" folder.
 
   
 ########################### funfacts ############################
 funfacts:
-  enable : true
+  enable : false
   funfact_item:
     # funfact item loop
     - name : "TEACHERS"
