--- a/config.toml
+++ b/config.toml
@@ -55,11 +55,13 @@ enable = true
 preloader = "Bienvenido! Qori"
 
 [[params.social]]
-URL = "https://www.facebook.com/qori.france"
+title = "facebook"
+link = "https://www.facebook.com/qori.france"
 icon = "ti-facebook"
 
 [[params.social]]
-URL = http://m.me/qori.france
+title = "messenger"
+link = "http://m.me/qori.france"
 icon = "ti-comments"
 
 ################################### Espanol language #####################################
