--- a/data/fr/homepage.yml
+++ b/data/fr/homepage.yml
@@ -91,8 +91,8 @@ cta:
   title : "Apprentissage en réseautique avancée"
   button:
     enable : true
-    label : "Se joindre"
-    link : "contact"
+    label : "Réserver un rendez-vous en ligne"
+    link : "https://calendly.com/qori"
 
 
 ######################## Success story #############################
