--- a/data/fr/homepage.yml
+++ b/data/fr/homepage.yml
@@ -65,7 +65,7 @@ banner_feature:
 
 ############################## about ##################################
 about:
-  enable : true
+  enable : false
   title : "À propos de Qori"
   image : "images/about/about-us.jpg"
   content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat  pariatur. Excepteur sint occaecat
